@startuml

title US 108 - As an Http Client I want to a list of all existing Rooms
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor Snow
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class HouseSettingsWebController
class RoomRepository
class RoomDTOMinimal
class Room
class RoomMapper
class RoomCrudRepository

HouseSettingsWebController -- RoomRepository: >
HouseSettingsWebController -- RoomDTOMinimal: >
RoomRepository -- RoomCrudRepository : >
RoomRepository -- RoomMapper : >
RoomRepository -- RoomDTOMinimal : >
RoomRepository -- Room : >




class HouseSettingsWebController {
getHouseRooms()
}

class RoomDTOMinimal {
}

class Room{
}

class RoomMapper{
objectToDTO(roomDTOMinimal)
}


class RoomRepository {
getAllRoomDTOMinimal()
}

class RoomCrudRepository{
findAll()
}


@enduml